[gd_scene load_steps=6 format=3 uid="uid://dr3phg0cw6sg0"]

[ext_resource type="Script" path="res://scripts/control/Menu.gd" id="1_ai4oa"]
[ext_resource type="Texture2D" uid="uid://cxo4bck6pbo1n" path="res://Art/Resources/menus/MenuImg.png" id="2_lvm1r"]
[ext_resource type="AudioStream" uid="uid://bquutwh1h5mq0" path="res://Art/sounds/waitingroom.mp3" id="3_1wivi"]
[ext_resource type="Script" path="res://scripts/control/WaitingSong.gd" id="4_dyqw6"]
[ext_resource type="PackedScene" uid="uid://c4fwwlaaeek0q" path="res://scenes/control/menu_settings.tscn" id="5_nhcnl"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ai4oa")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lvm1r")

[node name="BtnPlay" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 498.0
offset_top = 388.0
offset_right = 703.0
offset_bottom = 444.0
theme_override_colors/font_color = Color(1, 0.736438, 0.613135, 1)
theme_override_colors/font_pressed_color = Color(0.738283, 0.571438, 0.435684, 1)
theme_override_colors/font_focus_color = Color(0.737255, 0.572549, 0.435294, 1)
theme_override_colors/font_outline_color = Color(0.598325, 0.40524, 0.260042, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
flat = true

[node name="BtnGoToSettings" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 493.0
offset_top = 464.0
offset_right = 698.0
offset_bottom = 520.0
theme_override_colors/font_color = Color(1, 0.736438, 0.613135, 1)
theme_override_colors/font_pressed_color = Color(0.738283, 0.571438, 0.435684, 1)
theme_override_colors/font_focus_color = Color(0.737255, 0.572549, 0.435294, 1)
theme_override_colors/font_outline_color = Color(0.598325, 0.40524, 0.260042, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
flat = true

[node name="btnExitGame" type="Button" parent="TextureRect"]
layout_mode = 0
anchor_left = 0.428819
anchor_top = 0.820988
anchor_right = 0.610243
anchor_bottom = 0.91821
flat = true
metadata/_edit_use_anchors_ = true

[node name="WaitingSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1wivi")
bus = &"music"
script = ExtResource("4_dyqw6")

[node name="MenuSettings" parent="." instance=ExtResource("5_nhcnl")]
layout_mode = 1

[connection signal="button_down" from="TextureRect/BtnPlay" to="." method="_on_click"]
[connection signal="button_down" from="TextureRect/BtnGoToSettings" to="." method="_on_btn_go_to_settings_button_down"]
[connection signal="pressed" from="TextureRect/btnExitGame" to="." method="_on_btn_exit_game_pressed"]
[connection signal="finished" from="WaitingSong" to="WaitingSong" method="_on_finished"]
